--- a/package.json
+++ b/package.json
@@ -4,7 +4,9 @@
   "description": "\"# react-barebone\"",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "dev-server": "nodemon --exec babel-node src/server/server.js --ignore dist/",
+    "dev-bundle": "webpack -w -d",
+    "test": "jest"
   },
   "repository": {
     "type": "git",
